--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -10,26 +10,19 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   collection: ^1.15.0
   cupertino_icons: ^1.0.2
-
   equatable: ^2.0.0
-  flexidate: ^0.4.4+1
-  flutter_platform_widgets: ^1.0.1-nullsafety.0
+  flexidate: ^0.5.0+1
   flutter:
     sdk: flutter
+  flutter_platform_widgets: ^1.1.0
+  full_text_search: ^0.8.0+1
   intl: ^0.17.0
   logging: ^1.0.0
   logging_config: ^0.6.7+6
-
+  permission_handler: ^6.1.1
   quiver: ^3.0.0
-  uuid: ^3.0.1
-  full_text_search: ^0.7.5+2
-  permission_handler: ^6.1.0
+  uuid: ^3.0.2
 
-dependency_overrides:
-  dartxx:
-    path: ../../dartxx
-  flexidate:
-    path: ../../flexidate
 dev_dependencies:
   flutter_contact:
     path: ../
