--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,20 +8,20 @@ environment:
   flutter: ^1.10.0
 dependencies: 
   collection: ^1.15.0
-  dartxx: ^0.4.4
+  dartxx: ^0.5.0+2
   equatable: ^2.0.0
-  flexidate: ^0.4.4
+  flexidate: ^0.5.0+1
+  flutter:
+    sdk: flutter
   intl: ^0.17.0
   logging: ^1.0.0
-  logging_config: ^0.6.7
+  logging_config: ^0.6.7+6
   quiver: ^3.0.0
   uuid: ^3.0.1
-  flutter: 
-    sdk: flutter
-dev_dependencies: 
-  pedantic: ^1.11.0
+dev_dependencies:
   flutter_test: 
     sdk: flutter
+  pedantic: ^1.11.0
 flutter: 
   plugin: 
     platforms: 
